--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.2-dev - (unreleased)
 ----------------------
+* Bug fix: Fix documentation
+  [avoinea]
 
 1.1 - (2013-12-17)
 ------------------
