--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.3-dev - (unreleased)
+----------------------
+
 1.2 - (2014-01-22)
 ------------------
 * Bug fix: Fix documentation
