--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.4-dev - (unreleased)
+----------------------
+
 1.3 - (2014-06-06)
 ------------------
 * Feature: updated Font-awesome fonts and icons to 4.1
