--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.4-dev - (unreleased)
 ----------------------
+* Bug fix: Fix Font-Awesome icons within PDFs generated with wkhtmltopdf
+  [voineali refs #21149]
 
 1.3 - (2014-06-06)
 ------------------
