Updated version for eea.icons to 1.6.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.6.dev0 - (unreleased)
+-----------------------
+
 1.5 - (2015-02-16)
 ------------------
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
