Refs #23017; Updated FontAwesome fonts to version 4.3

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.6.dev0 - (unreleased)
 -----------------------
+* Change: upgraded Font Awesome fonts to version 4.3
+  [ichimdav refs #23017]
 
 1.5 - (2015-02-16)
 ------------------
