Refs #24129; [css icons] updated styling with the following changes:
- Moved our customizations to the bottom of the file
- Removed customizations of fontawesome styling from the first section of the css in order for the upgrade to be a simple copy and paste
- Fixed an issue with wrong line-heights when icons are floated after move to the css of FontAwesome 4.3

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 1.7.dev0 - (unreleased)
 -----------------------
+* Change: fixed eea-icons line-height issues after upgrade
+  to version 4.3
+  [ichimdav refs #24129]
 
 1.6 - (2015-03-17)
 ------------------
