--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.9.dev0 - (unreleased)
+-----------------------
+
 1.8 - (2015-09-10)
 ------------------
 * Change: eea-icons.js now checks if we need to add the icons within the icon
