--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.9.dev0 - (unreleased)
 -----------------------
+* Change: eea-icons.css now define extra content type extension names
+  [ichimdav refs #28967]
 
 1.8 - (2015-09-10)
 ------------------
