--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+2.0.dev0 - (unreleased)
+-----------------------
+
 1.9 - (2015-11-03)
 ------------------
 * Change: eea-icons.css now define extra content type extension names
