--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 2.0.dev0 - (unreleased)
 -----------------------
+* Bug fix: Fix read permission on eea-icons-annimation.css.dtml file
+  [voineali refs #27406]
 
 1.9 - (2015-11-03)
 ------------------
@@ -19,7 +21,7 @@ Changelog
 ------------------
 * Change: Switched to curl in the jenkins build install script
   [olimpiurob refs #22402]
-* Change: Changed fetch url for jenkins build install script to the install 
+* Change: Changed fetch url for jenkins build install script to the install
   script from the main EEA CPB repository
   [olimpiurob refs #22402]
 * Change: fixed eea-icons line-height issues after upgrade
