--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+2.1.dev0 - (unreleased)
+-----------------------
+
 2.0 - (2015-12-11)
 ------------------
 * Bug fix: Fix read permission on eea-icons-annimation.css.dtml file
