--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+2.2.dev0 - (unreleased)
+-----------------------
+
 2.1 - (2016-05-19)
 ------------------
 * Bug fix: Fix pylint warnings
