--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+2.3.dev0 - (unreleased)
+-----------------------
+
 2.2 - (2016-09-13)
 ------------------
 * Bug fix: Fixed HTTP/HTTPS mixed content within CSS
