--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 2.3.dev0 - (unreleased)
 -----------------------
+* Change: updated package information
+[eduard-fironda]
 
 2.2 - (2016-09-13)
 ------------------
