--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,7 +2,9 @@ Changelog
 =========
 
 2.9-dev0 - (unreleased)
----------------------
+-----------------------
+* Bug fix: fixed fontAwesome loading
+  [alecghica refs #95020]
 
 2.8 - (2018-04-18)
 ------------------
