upgraded Font Awesome from v4.4.0 to v4.7.0, refs #95849

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 ---------------------
 * Change: updated URLs pointing to eea.europa.eu with https://
   [alecghica refs #95849]
+* Feature: upgraded Font Awesome from v4.4.0 to v4.7.0
+  [alecghica refs #95849]
 
 3.0 - (2018-06-08)
 ---------------------
